# prog-strength-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  eval.yml  manual-deploy.yml  release.yml
examples/: README.md  chat_with_agent.py
examples/data/: Week 1 Workout 2 - Chest & Back
src/prog_strength_mcp/: __init__.py  __main__.py  api_client.py  bodyweight.py  config.py  exercises.py  macro_goals.py  nutrition.py  nutrition_lookup.py  pantry.py  planned_workouts.py  recipes.py  running.py  server.py  steps.py  training_snapshot.py  version.py  workouts.py
src/prog_strength_mcp/nutrition_lookup/: __init__.py  fatsecret.py  models.py  service.py  tools.py  usda.py
tests/: test_nutrition_lookup.py  test_nutrition_tools.py  test_planned_workouts_tools.py  test_running_tools.py  test_steps_tools.py  test_training_snapshot_tools.py
